--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,10 +25,9 @@ h1{
     font-size: 30px;
 }
 
-section.home{
-    margin-top: 61px;
+header{
+    margin-bottom: 61px;
 }
-
 
 /*--------------------------------------------------------------
 # NavBar
@@ -186,24 +185,24 @@ img.card-profile{
     row-gap: 23px;
 }
 
+.column{
+    height: 100%;
+}
+
 .card.card-project{
     overflow: hidden;
     border-radius: 7px;
     width: 380px;
-    height: 35rem;
+    height: auto;
     margin: 0;
     padding: 0;
-}
-
-.column{
-    height: 100%;
 }
 
 .card-project-photo{
     overflow: hidden;
     border-radius: 10px;
     width: 100%;
-    height: 45%;
+    height: 14rem;
     padding: 0;
     margin: 0;
 }
@@ -213,18 +212,22 @@ img.project-photo{
 }
 
 .card-body.card-project{
-    height: 55%;
+    height: auto;
+    padding-bottom: 0px;
+    /* background-color: #615f5f; */
     overflow: hidden;
 }
 
 .column.project-content{
     height: 100%;
+    /* background-color: aqua; */
     margin: 0;
     padding: 0;
 }
 
 .card-title.card-project{
-    height: 20%;
+    height: 3rem;
+    /* background-color: #e47171; */
 }
 
 .card-title.card-project a{
@@ -240,14 +243,17 @@ img.project-photo{
 } 
 
 .card-text.card-project{
-    height: 41%;
-    margin-top: -16px;
+    height: 8rem;
+    /* background-color: #5f3d3d; */
+    margin-top: -8px;
+    margin-bottom: 10px;
     /* text-align: justify; */
     overflow: hidden;
 }
 
 .project-icon{
-    height: 30%;
+    height: 4rem;
+    /* background-color: #5672a5; */
 }
 
 .project-icon i{
@@ -256,7 +262,8 @@ img.project-photo{
 }
 
 .project-button{
-    height: 15%;
+    height: 3rem;
+    /* background-color: #5f3d3d; */
     column-gap: 5px;
     
 }
@@ -336,6 +343,15 @@ input[type=file]{
 # Media Screen
 --------------------------------------------------------------*/
 @media (min-width: 200px) and (max-width: 760px){
+    h1{
+        font-size: 20px;
+    }
+
+    form label{
+        font-size: 14px;
+        font-weight: 700;
+    }
+
     .container-fluid.home-upper,.container-fluid.home-lower{
         padding: 30px 20px 30px 20px; 
     }
