--- a/views/project-blog.html
+++ b/views/project-blog.html
@@ -26,7 +26,7 @@
     <body>
          <!-- NavBar -->
          <header>
-            <nav class="navbar fixed-top navbar-expand-md bg-body-tertiary bg-dark shadow" data-aos="fade-down" data-aos-duration="500">
+            <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary bg-dark shadow" data-aos="fade-down" data-aos-duration="500">
                 <div class="container px-3">
                     <!-- NavBar Logo -->
                     <a class="navbar-brand me-5" href="/">
@@ -59,6 +59,14 @@
                         <!-- End Left Side -->
 
                         <!-- Right Side -->
+                        <ul class="navbar-nav mt-2 mt-lg-0 mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link me-5" href="/register">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link me-5" href="/login">Login</a>
+                            </li>
+                        </ul>
                         <a class="btn btn-outline-light btn-sm px-3 py-1" href="/contact-me" role="button">Contact Me</a>
                         <!-- End Right Side -->
 
