--- a/views/index.html
+++ b/views/index.html
@@ -187,7 +187,7 @@
                                     <div class="column">
                                         <!-- Project Photo -->
                                         <div class="card-project-photo d-flex justify-content-center align-items-center">
-                                            <img src="/public/img/card01.jpg" class="project-photo" alt="Project Photo">
+                                            <img src="/uploads/{{$data.Image}}" class="project-photo" alt="Project Photo">
                                         </div>
                                         <!-- End Project Photo -->
 
