--- a/views/project.html
+++ b/views/project.html
@@ -101,7 +101,7 @@
 
                     <!-- Form -->
                     <div class="col-12 col-md-8 col-lg-5 mt-4">
-                        <form action="/add-card" method="POST">
+                        <form action="/add-card" method="POST" enctype="multipart/form-data">
                             <!-- Project Name -->
                             <div class="form-group mb-4">
                                 <label for="pName">Project Name</label>
@@ -158,7 +158,7 @@
                                 <label for="file" class="form-label">Upload Image</label>
                                 <div class="input-group shadow">
                                     <label class="input-group-text" for="file">Choose</label>
-                                    <input class="form-control" accept="image/*" type="file" id="file" value="sd">
+                                    <input class="form-control" name="input-image"  accept="image/*" type="file" id="file" value="sd">
                                     <span class="input-group-text file"><i class="fas fa-paperclip"></i></span>
                                 </div>
                             </div>
