--- a/views/project-blog.html
+++ b/views/project-blog.html
@@ -52,9 +52,11 @@
                             <li class="nav-item me-5">
                                 <a class="nav-link" aria-current="page" href="/">Home</a>
                             </li>
+                            {{if $.Data.IsLogin}}
                             <li class="nav-item me-5">
                                 <a class="nav-link" href="/add-project">Add Project</a>
                             </li>
+                            {{end}}
                         </ul>
                         <!-- End Left Side -->
 
@@ -103,7 +105,7 @@
                             <div class="h-100 py-4 pe-lg-5 col-12 col-lg-8 order-1 d-flex flex-column justify-content-center">
                                 <!-- Project Image -->
                                 <div class="project-blog-image bg-dark px-0 py-0 mx-0 mt-0 d-flex flex-column justify-content-center">
-                                    <img class="pb-image" src="/public/img/card01.jpg" alt="Blog Image" style="width:100%;">
+                                    <img class="pb-image" src="/uploads/{{$data.Image}}" alt="Blog Image" style="width:100%;">
                                 </div>
                                 <!-- End Project Image -->
                             </div>
